--- a/cse.html
+++ b/cse.html
@@ -15,7 +15,7 @@ body, html {
 
 .bg-image {
   /* The image used */
-  background-image: url("../HTML/program-comp-sci.jpg");
+  background-image: url("https://engineering.nyu.edu/sites/default/files/styles/content_header_default_1x/public/2018-03/program-comp-sci.jpg?h=e1d1bc8a&itok=-xmP6Hjw");
   
   /* Add the blur effect */
   filter: blur(9px);
