--- a/ece.html
+++ b/ece.html
@@ -15,7 +15,7 @@ body, html {
 
 .bg-image {
   /* The image used */
-  background-image: url("../HTML/userece.jpg");
+  background-image: url("https://www.avit.ac.in/img/userece.jpg");
   
   /* Add the blur effect */
   filter: blur(9px);
