--- a/it.html
+++ b/it.html
@@ -15,7 +15,7 @@ body, html {
 
 .bg-image {
   /* The image used */
-  background-image: url("../HTML/communityIcon_00n25pfjybq61.png");
+  background-image: url("https://t3.ftcdn.net/jpg/02/85/69/20/360_F_285692000_ij9sGGSq5EKwmzxhk7PLOiLJRXMOZpV7.jpg");
   
   /* Add the blur effect */
   filter: blur(9px);
