--- a/civil.html
+++ b/civil.html
@@ -15,7 +15,7 @@ body, html {
 
 .bg-image {
   /* The image used */
-  background-image: url("../HTML/civil-engineering-branch.jpg");
+  background-image: url("https://www.accurate.in/engg/img/page/civil-engineering-branch.jpg");
   
   /* Add the blur effect */
   filter: blur(9px);
