--- a/ce.html
+++ b/ce.html
@@ -15,7 +15,7 @@ body, html {
 
 .bg-image {
   /* The image used */
-  background-image: url("../HTML/60zK9IC3.jpeg");
+  background-image: url("https://www.thehighereducationreview.com/newsimagespl/60zK9IC3.jpeg");
   
   /* Add the blur effect */
   filter: blur(9px);
