--- a/a.html
+++ b/a.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/x-icon" href="https://www.jobskar.com/uploads/orgimg/d0259fbde5641d872d9d7fd7adfcdc29.png" > <!--adding fevicon of mnnit-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> <!--linking w3 school -->
-    <link rel="stylesheet" href="styles.css"> <!-- linking styles.css file-->
-    <link rel="stylesheet" href="cards.css">
+    <link rel="stylesheet" href="CSS/newstyle.css"> <!-- linking styles.css file-->
+    <link rel="stylesheet" href="CSS/cards.css">
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 </head>
 <header>
@@ -14,7 +14,7 @@
         <b>Welcome to MNNIT Website</b>
     </marquee>
 </header>
-<body style="background-color:whitesmoke ;">
+<body  style="background-image: linear-gradient(to right, #FFE4C0,#CAF0F8);">
     <center>
     <table border="0" style="border-spacing:50px;padding: 0px;">
         <tr>
@@ -78,13 +78,13 @@
             <img class="mySlides" src="https://images.shiksha.com/mediadata/images/1535368937php8IauG3.jpeg" style="width:90%;height: 800px;">
             <img class="mySlides" src="E:\main-qimg-9dc5358957951b4e828387694c2b7b98.webp" style="width: 90%;height: 800px;">
             <img class="mySlides" src="https://www.collegesearch.in/upload/institute/images/large/121004123639_DSC_3707.jpg" style="width: 90%;height: 800px;">
-                <div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">   
+               <!-- <div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">   
                 <div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
                 <div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
                 <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(1)"></span>
                 <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(2)"></span>
                 <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></span>
-            </div>
+            </div>-->
         </div>
 
 
@@ -213,7 +213,7 @@
         <div class="des1" >
             <a style = "color:black; text-decoration:none ;" href = "E:\tejash\c codes\web dev\departments\engineering\mech.html" ><H1><b>ME</b></H1></a><br><br>
         </div>
-    </div>
+    </div><BR>
     <div class="card1" style="padding: 5px 5px 5px 5px;width: 13%;height: 100px;">
         <div class="des1" >
             <a style = "color:black; text-decoration:none ;" href = "E:\tejash\c codes\web dev\departments\engineering\pie.html" ><H1><b>PIE</b></H1></a><br><br>
