--- a/a.html
+++ b/a.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> <!--linking w3 school -->
     <link rel="stylesheet" href="CSS/newstyle.css"> <!-- linking styles.css file-->
-    <link rel="stylesheet" href="CSS/cards.css">
+    <link rel="stylesheet" href="CSS/cards2.css">
     <link rel="stylesheet" href="CSS/footerstyles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
@@ -16,7 +16,7 @@
         <b><a href="https://ariia.gov.in/Ranking/2021/Index.html" style="text-decoration: none;color: rgb(143, 5, 5);">MNNIT Allahabad is ranked among Top 10 CFTIs / Central University / Institute of National Importance (Technical) in Atal Ranking of Institutions on Innovation Achievements 2021(ARIIA) | <a href="https://academics.mnnit.ac.in/notice_bt/" style="text-decoration: none;color: rgb(17, 143, 5);">Notifications for B.Tech. Admissions (Session 2021-22).| <a href="https://api.mic.gov.in/uploads/institutes/mic/images/announcements/iic%20annual%20performance%202020-21-university.pdf" style="text-decoration: none;color: rgb(6, 4, 159);"> Institutions' Innovation Council, MNNIT Allahabad awarded Four [4] Star Ranking by Ministry of Education’s Innovation Cell (MIC) and All India Council for Technical Education (AICTE)</a> </a></a> </b>
     </marquee>
 
-<body  style="background-image: linear-gradient(150deg,  #CAF0F8, #fbdeb8);">
+<body  style="background-image: linear-gradient(150deg,  #caf0f8a1, #fbdeb87a);">
     <center>
     <table border="0" style="border-spacing:30px;padding: 0px;">
         <tr>
@@ -297,4 +297,4 @@
 
     </center>
 </body>
-</html>
+</html> 
