--- a/hostel.html
+++ b/hostel.html
@@ -4,50 +4,56 @@
         <title>Hostels</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="styles1.css">
+        <link rel="icon" type="image/x-icon" href="https://www.jobskar.com/uploads/orgimg/d0259fbde5641d872d9d7fd7adfcdc29.png" >
+
     </head> 
     <body  class="container">
         <h1 style="text-decoration:underline ;text-align: center;">HOSTELS</h1>
         <hr class="dropdownl">
-        <h3>Details:</h3>
+        <h2>Details:</h2><br>
+        <hr class="HRsmall">
         <h5>There are seven Boys and two Girls hostels at present in the Institute. The capacity of boys hostel is 1800 (1044 single seated rooms and 252 triple seated rooms ) and that of girls hostel is 145. Room allotment is done in such a way that students from different parts of country freely intermingle with each other depicting national integration.</h5>
         <h5>Hostel messes are run no profit no loss basis. The messes are managed by nominated representatives of students under the overall supervisions of wardens. The foreign students run their separate mess named as international mess. In this mess non vegetarian food is also served.</h5>
         <h5>The newly admitted boys students are kept in separate hostels away from senior students to avoid ragging. The hostel administration grants financial assistance to meet the mess bills to many needy students. One new hostel has also been constructed to accommodate additional number of students.</h5>
         <h5>Several new facilities are being provided in girls hostel viz. washing machines, refrigerators, computers, internet connectivity. One PCO booth is also working in the girls hostel campus.</h5>
         <h5>There is a team of a warden in charge and warden for each of the hostel. They look after the affairs of the room allocation to the individual students and issuing the 'Concession Forms' for the students going home during the Institute vacations. All the student complaints regarding the room maintainence are routed through the warden of the hostel to the concerned authorities.</h5>
-        <h3>Facilities:</h3>
-        <dl>
-            <dt style="text-decoration:underline ;">BOYS HOSTEL</dt>
-            <dd>
-                <pre>
-                    >Geysers and Water coolers with aquaguard on every floor.
-                    >PCO for STD/Local calls.
-                    >Books and Stationary shop.
-                    >24 hours internet connectivity with 100 Mbps LAN.
-                    >Guest room.
-                    >Generator, which in case of power failure provides electricity to the hostels.
-                    >All night canteen.
-                    >Magazine and Newspapers are provided.
-                    >Students club.
-                </pre>
-            </dd>
-            <dt style="text-decoration:underline ;">GIRLS HOSTEL</dt>
-            <dd >
-                <pre>
-                >Washing machine.
-                >PCO inside the hostel.
-                >Generator, which in case of power failures provides electricity to the mess and the common room.
-                >Provisional goods store in the hostel premises.
-                >Four Computers.
-                >Intercom line.
-                >24 hours internet connectivity with 100 Mbps LAN.
-                >Water cooler and Geysers.
-                >Magazine and Newspapers are provided.
-                >Two motor pumps installed.
-                >Air cooler and Refrigerator.
-                >Stereo system.</pre>
-                </dd>
-            </dd>
-        </dl>
+        <br><br><h2>Facilities:</h2>
+        <br><br>
+        <h2 style="text-decoration:underline ;text-align:center">BOYS HOSTEL</h2><br><br>
+        <pre><h5>
+            >Geysers and Water coolers with aquaguard on every floor.<br>
+            >PCO for STD/Local calls.<br>
+            >Books and Stationary shop.<br>
+            >24 hours internet connectivity with 100 Mbps LAN.<br>
+            >Guest room.<br>
+            >Generator, which in case of power failure provides electricity to the hostels.<br>
+            >All night canteen.<br>
+            >Magazine and Newspapers are provided.<br>
+            >Students club.</h5>
+        </pre>
+        <h2 style="text-decoration:underline ;text-align:center">GIRLS HOSTEL</h2><br><br>
+        <pre><h5>
+            >Washing machine.<br>
+            >PCO inside the hostel.<br>
+            >Generator, which in case of power failures provides electricity to the mess and the common room.<br>
+            >Provisional goods store in the hostel premises.<br>
+            >Four Computers.<br>
+            >Intercom line.<br>
+            >24 hours internet connectivity with 100 Mbps LAN.<br>
+            >Water cooler and Geysers.<br>
+            >Magazine and Newspapers are provided.<br>
+            >Two motor pumps installed.<br>
+            >Air cooler and Refrigerator.<br>
+            >Stereo system.</h5>
+        </pre>
+        <center>
+        <h2 style="text-decoration:underline ;text-align:center">MESS</h2><br>
+        <h5>This is run by students in both boys and girls hostel. Mess workers are under their control.</h5><br><br>
+        <h2 style="text-decoration:underline ;text-align:center">MAINTENANCE AND REPAIR</h2><br>
+        <h5>Sweeper cleans the hostels everyday. White washing is done annually.Electrician and Carpenters are available from 10am to 6pm.The peon and hostel attendants look after any problem which may arise due to nonfunctioning of any item. </h5><br><br>
+        <h2 style="text-decoration:underline ;text-align:center">FURNISHING</h2><br>
+        <h5>Each room in every hostel has a chair, a study table, a tea table, a cot, a fan, a bulb connection, two plug points and two shelves.</h5><br><br>
+        </center>
     </body>
 </html>
